--- a/pages/statistics/statistics_index/statistics_index.wxml
+++ b/pages/statistics/statistics_index/statistics_index.wxml
@@ -1,28 +1,25 @@
 <!-- 统计 -->
 <view class="statistics_page">
   <!-- 上面tab -->
-  <view class="tabs_top">
-    <van-tabs 
-      active="{{ active }}" 
-      bind:change="onChangeTabTop"
-      swipe-threshold="{{5}}"
-      color="#00A6FF"
-    >
-      <van-tab title="本人">
-      </van-tab>
-      <van-tab title="本店">
-      </van-tab>
-    </van-tabs>
+  <view class="tabs_top flexCenter flexAround">
+    <view class="tabs_item{{activeTop==0?' active':''}}"
+      bindtap="cutTab"
+      data-index="{{0}}"
+    >本人</view>
+    <view class="tabs_item{{activeTop==1?' active':''}}"
+      bindtap="cutTab"
+      data-index="{{1}}"
+    >本店</view>
   </view>
 
   <!-- content -->
-  <view class="content" style="display:{{activeTop==0?'block':'none'}}">
+  <view class="content">
     <view class="chart">
       <view class="chart_month">
-        <view wx:for="{{monthList}}" wx:key="index"
-          class="{{item==curMonth?'month_active':''}}"
+        <view wx:for="{{showMonthList}}" wx:key="index"
+          class="{{index==curMonthIndex?'month_active':''}}"
           bindtap="cutMonth"
-          data-param="{{item}}"
+          data-monthindex="{{index}}"
         >
           {{item}}月
         </view>
@@ -31,125 +28,58 @@
       <view class='chart_circle_wrap'>
         <view class="flexJCenter">
           <view>
-            <view>已下单0笔</view>
+            <view>已下单{{tradeCount}}笔</view>
             <image class="static_img_01" src='https://cdn.s.bld365.com/getli_statistics_img_01.png' alt=''></image>
           </view>
           <view style="position:relative;">
             <!-- 环形进度条 -->
             <van-circle 
-              value="{{50}}" 
-              text="{{0}}笔" 
+              value="{{percent}}" 
+              text="{{sumCount}}笔" 
               color="#93d1fa"
               layer-color="#48a5f8"
               stroke-width="{{8}}"
             />
           </view>
           <view>
-            <view style="text-align:right;">待转销售0笔</view>
+            <view style="text-align:right;">待转销售{{preOrderCount}}笔</view>
             <image class="static_img_01" src='https://cdn.s.bld365.com/getli_statistics_img_02.png' alt=''></image>
           </view>
         </view>
 
-        <view class="flexCenter flexBetween chart_circle_text_wrap">
-          <view>
+        <view class="flexCenter flexJCenter chart_circle_text_wrap">
+          <!-- <view>
             <view>本日订单：0笔</view>
             <view>本月订单：0笔</view>
           </view>
           <view>
             <view>预计收入：0.00</view>
             <view>预计收入：0.00</view>
-          </view>
+          </view> -->
+          <view>本月订单：{{allSaleCount}}笔</view>
         </view>
       </view>
     </view>
 
     <!-- 列表 -->
     <view class="list">
-      <view wx:for="{{list_month}}" wx:key="index"
-        class="list_item bg_white"
-      >
-        <view class="flexCenter flexBetween list_item_title">
-          <view class="list_item_title_text">{{item.title}}</view>
-          <view>{{item.status}}</view>
-        </view>
-        <view class="list_item_content">
-          <view>商品型号：{{item.code}}</view>
-          <view>应得奖金：{{item.fee}}元</view>
-          <view>提交时间：{{item.time}}</view>
-        </view>
+      <view class="list_item list_title">
+        <view class="rect"></view>销售数量
       </view>
-    </view>
-  </view>
-
-
-  
-
-  <!-- content -->
-  <view class="content" style="display:{{activeTop==0?'none':'block'}}">
-    <view class="chart">
-      <view class="chart_month">
-        <view wx:for="{{monthList}}" wx:key="index"
-          class="{{item==curMonth?'month_active':''}}"
-          bindtap="cutMonth"
-          data-param="{{item}}"
-        >
-          {{item}}月
-        </view>
-      </view>
-      
-      <view class='chart_circle_wrap'>
-        <view class="flexJCenter">
-          <view>
-            <view>已下单0笔</view>
-            <image class="static_img_01" src='https://cdn.s.bld365.com/getli_statistics_img_01.png' alt=''></image>
-          </view>
-          <view>
-            <!-- 环形进度条 -->
-            <van-circle 
-              value="{{50}}" 
-              text="{{0}}笔" 
-              color="#93d1fa"
-              layer-color="#48a5f8"
-              stroke-width="{{8}}"
-            />
-          </view>
-          <view>
-            <view style="text-align:right;">待转销售0笔</view>
-            <image class="static_img_01" src='https://cdn.s.bld365.com/getli_statistics_img_02.png' alt=''></image>
-          </view>
-        </view>
-
-        <view class="flexCenter flexBetween chart_circle_text_wrap">
-          <view>
-            <view>本日订单：0笔</view>
-            <view>本月订单：00笔</view>
-          </view>
-          <view>
-            <view>预计收入：0.00</view>
-            <view>预计收入：0.00</view>
-          </view>
-        </view>
-      </view>
-    </view>
-
-    <!-- 列表 -->
-    <view class="list">
       <view wx:for="{{list}}" wx:key="index"
-        class="list_item bg_white"
+        class="list_item"
       >
-        <view class="flexCenter flexBetween list_item_title">
-          <view class="list_item_title_text">{{item.title}}</view>
-          <view>{{item.status}}</view>
-        </view>
         <view class="list_item_content">
-          <view>商品型号：{{item.code}}</view>
-          <view>应得奖金：{{item.fee}}元</view>
-          <view>提交时间：{{item.time}}</view>
+          <view>商品型号：{{item.goodsCode}}</view>
+          <view>商品名称：{{item.goodsName}}</view>
+          <view>数<text decode="{{true}}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</text>量：{{item.goodsCount}}台</view>
         </view>
       </view>
+      <view wx:if="{{list.length==0}}" class='noresult'>暂无数据</view>
     </view>
   </view>
 
+  <view style="height:200rpx;"></view>
 
 
 
