--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -58,7 +58,7 @@
       <image class="list_item_img" src='https://cdn.s.bld365.com/getli_index_list_item_img_01.png' alt=''></image>
       <view class="list_item_content">
         <view>今日销售：台</view>
-        <view class="list_item_count">{{6}}</view>
+        <view class="list_item_count">{{countData.preOrderSaleUserCount}}</view>
       </view>
     </view>
 
@@ -66,7 +66,7 @@
       <image class="list_item_img" src='https://cdn.s.bld365.com/getli_index_list_item_img_02.png' alt=''></image>
       <view class="list_item_content">
         <view>本店销售：台</view>
-        <view class="list_item_count">{{86}}</view>
+        <view class="list_item_count">{{countData.preOrderDepartCount}}</view>
       </view>
     </view>
 
@@ -74,7 +74,7 @@
       <image class="list_item_img" src='https://cdn.s.bld365.com/getli_index_list_item_img_03.png' alt=''></image>
       <view class="list_item_content">
         <view>待转销售：台</view>
-        <view class="list_item_count">{{32}}</view>
+        <view class="list_item_count">{{countData.tradeSaleUserCount}}</view>
       </view>
     </view>
 
@@ -82,7 +82,7 @@
       <image class="list_item_img" src='https://cdn.s.bld365.com/getli_index_list_item_img_04.png' alt=''></image>
       <view class="list_item_content">
         <view>已转销售：台</view>
-        <view class="list_item_count">{{26}}</view>
+        <view class="list_item_count">{{countData.tradeDepartCount}}</view>
       </view>
     </view>
 
