--- a/pages/order/cart_busi/cart_busi.wxml
+++ b/pages/order/cart_busi/cart_busi.wxml
@@ -11,8 +11,8 @@
         </view>
         <view class="item_content_content">
           <view class="item_content_content_top">
-            <view class="textOmit" style="color:#000;font-size:25rpx;">{{item.goodsName}}</view>
-            <view style="color:#9B9B9B;font-size:22rpx;margin:10rpx 0;">{{item.goodsDesc}}</view>
+            <view class="textOmit" style="color:#000;font-size:29rpx;">{{item.goodsName}}</view>
+            <view style="color:#9B9B9B;font-size:26rpx;margin:10rpx 0;">{{item.goodsDesc}}</view>
             <!-- <view class="flex">
               <view wx:for="{{item.tag}}"
                 wx:for-index="tagIndex" 
@@ -27,10 +27,14 @@
             <view wx:if="{{item.tradeFeeYuan}}">
               {{item.tradeFeeYuan}}元<text decode="{{true}}">&nbsp;&nbsp;</text>x<text decode="{{true}}">&nbsp;</text><text>{{item.count}}</text>
             </view>
-            <view wx:else>
+            <view wx:elif="{{item.priceFeeActivityYuan}}">
               {{item.priceFeeActivityYuan}}元<text decode="{{true}}">&nbsp;&nbsp;</text>x<text decode="{{true}}">&nbsp;</text><text>{{item.count}}</text>
             </view>
-            <view wx:if="{{type!=='BUSI_USE'}}"
+            <view wx:else>
+              {{item.priceFeeYuan}}元<text decode="{{true}}">&nbsp;&nbsp;</text>x<text decode="{{true}}">&nbsp;</text><text>{{item.count}}</text>
+            </view>
+
+            <view wx:if="{{type!=='BUSI_USE'&&item.ifUpdatePrice==1}}"
               bindtap="openEditPriceModal"
               data-index="{{index}}"
             >修改价格</view>
@@ -176,7 +180,12 @@
           <text wx:if="{{oldSelectedGoodsList[lookingIndex].tradeFeeYuan}}">
             {{oldSelectedGoodsList[lookingIndex].tradeFeeYuan}}
           </text>
-          <text wx:else>{{oldSelectedGoodsList[lookingIndex].priceFeeActivityYuan}}</text>
+          <text wx:elif="{{oldSelectedGoodsList[lookingIndex].priceFeeActivityYuan}}">
+            {{oldSelectedGoodsList[lookingIndex].priceFeeActivityYuan}}
+          </text>
+          <text wx:else>
+            {{oldSelectedGoodsList[lookingIndex].priceFeeYuan}}
+          </text>
         </view>
       </view>
       <view class="price_item">
@@ -208,9 +217,9 @@
   >
     <view class="flexColumn result_modal">
       <view class="flexColumn">
-        <view style="font-size:33rpx;margin-bottom:60rpx;">下单成功</view>
-        <!-- <view style="font-size:33rpx;margin-bottom:15rpx;">下单成功</view> -->
-        <!-- <view style="font-size:24rpx;margin-bottom:60rpx;">请通知顾客使用微信小程序进行预约安装</view> -->
+        <view style="font-size:37rpx;margin-bottom:60rpx;">下单成功</view>
+        <!-- <view style="font-size:37rpx;margin-bottom:15rpx;">下单成功</view> -->
+        <!-- <view style="font-size:28rpx;margin-bottom:60rpx;">请通知顾客使用微信小程序进行预约安装</view> -->
       </view>
       <view>
         <button class="btn_result"
