--- a/pages/order/order_detail_busi/order_detail_busi.wxml
+++ b/pages/order/order_detail_busi/order_detail_busi.wxml
@@ -205,7 +205,7 @@
     bind:close="onCloseTimePicker"
   > 
     <van-datetime-picker
-      type="datetime"
+      type="date"
       min-date="{{minDate}}"
       value="{{currentDate}}"
       bind:input="onInputTimePicker"
