--- a/pages/order/choose2_search_single/choose2_search_single.wxss
+++ b/pages/order/choose2_search_single/choose2_search_single.wxss
@@ -27,10 +27,10 @@
 .search_input {
   flex: 1 0 0;
   width: 0;
-  height: 100%;
+  /* height: 100%; */
   padding-left: 16rpx;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
 }
 
 .cancel_btn {
