--- a/pages/order/choose2_single/choose2_single.wxss
+++ b/pages/order/choose2_single/choose2_single.wxss
@@ -30,10 +30,10 @@ Page {
 
 .search_input {
   flex: 1 0 0;
-  height: 100%;
+  /* height: 100%; */
   padding-left: 16rpx;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
 }
 
 /* content */
