--- a/pages/renchou/renchou.wxss
+++ b/pages/renchou/renchou.wxss
@@ -52,7 +52,7 @@ Page {
 }
 
 .input {
-  height: 100%;
+  /* height: 100%; */
   flex: 1 0 0;
   padding-left: 35rpx;
 }
@@ -230,6 +230,17 @@ Page {
   margin-top: 92rpx;
 }
 
+.goodsItemWrap {
+  padding-right: 80rpx;
+}
+
+.taogou_icon {
+  width: 97rpx;
+  height: 41rpx;
+  position: absolute;
+  right: 0;
+}
+
 /* 商品列表的mask */
 
 .goodsList_mask {
@@ -263,7 +274,7 @@ Page {
 .goodsListSearch_input {
   flex: 1 0 0;
   width: 0;
-  height: 100%;
+  /* height: 100%; */
   padding-left: 15rpx;
 }
 
@@ -271,4 +282,22 @@ Page {
 
 .getSmsBtn {
   color: #00a6ff;
+}
+
+/* 添加商品 */
+.addbtn{
+  height:58rpx;
+  margin: 24rpx;
+  border-radius: 10rpx;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 26rpx;
+  outline: none;
+  border: 1rpx dashed #919191;
+  background-color: #f5f5f5;
+}
+
+.addbtn_active{
+  background-color: #ededed;
 }
