--- a/pages/order/order_detail_busi/order_detail_busi.wxss
+++ b/pages/order/order_detail_busi/order_detail_busi.wxss
@@ -22,7 +22,7 @@ Page {
 .rect {
   width: 8rpx;
   height: 29rpx;
-  background-color: #00A6FF;
+  background-color: #00a6ff;
   margin-right: 12rpx;
 }
 
@@ -60,7 +60,7 @@ Page {
   border: none;
   font-size: 28rpx;
   color: #fff;
-  background-color: #00A6FF;
+  background-color: #00a6ff;
 }
 
 .btn_active {
@@ -89,7 +89,7 @@ Page {
 
 .code_title {
   height: 147rpx;
-  background-color: #00A6FF;
+  background-color: #00a6ff;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,15 +101,15 @@ Page {
 }
 
 .code {
-  /* width: 362rpx;
+  width: 362rpx;
   height: 362rpx;
-  background-color: #ebebeb; */
+  /* background-color: #ebebeb; */
   margin: 58rpx auto 37rpx;
 }
 
 .code_img {
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 
