--- a/pages/order/order_index/order_index.wxml
+++ b/pages/order/order_index/order_index.wxml
@@ -42,15 +42,15 @@
         <view wx:if="{{navIndex==0||navIndex==1}}"
           class="item_title flexBetween van-hairline--bottom"
         >
-          <view wx:if="{{item.orderNo}}">{{item.orderNo}}</view>
-          <view class="datetime">{{item.orderDateStr}}</view>
+          <view wx:if="{{item.orderDateStr}}">{{item.orderDateStr}}</view>
+          <view wx:if="{{item.orderNo}}" class="datetime">{{item.orderNo}}</view>
         </view>
         <!-- 销售单接口 -->
         <view wx:if="{{navIndex==2||navIndex==3}}"
           class="item_title flexBetween van-hairline--bottom"
         >
-          <view wx:if="{{item.tradeNo}}">{{item.tradeNo}}</view>
-          <view class="datetime">{{item.tradeDateStr}}</view>
+          <view wx:if="{{item.tradeDateStr}}">{{item.tradeDateStr}}</view>
+          <view wx:if="{{item.tradeNo}}" class="datetime">{{item.tradeNo}}</view>
         </view>
 
         <view wx:for="{{item.goodsList}}" wx:for-index="idx" wx:for-item="itm"
@@ -71,7 +71,7 @@
                 data-phone="{{itm.phoneNumber}}"
               >
                 <text>{{itm.custName}}</text>
-                <text decode="{{true}}">&nbsp;</text>
+                <text decode="{{true}}">&nbsp;&nbsp;&nbsp;</text>
                 <text wx:if="{{itm.phoneNumber}}">{{itm.phoneNumber}}</text>
                 <van-icon wx:if="{{itm.phoneNumber}}"
                   name="phone" 
@@ -93,7 +93,7 @@
                 data-phone="{{item.phoneNumber}}"
               >
                 <text>{{item.custName}}</text>
-                <text decode="{{true}}">&nbsp;</text>
+                <text decode="{{true}}">&nbsp;&nbsp;&nbsp;</text>
                 <text wx:if="{{item.phoneNumber}}">{{item.phoneNumber}}</text>
                 <van-icon wx:if="{{item.phoneNumber}}"
                   name="phone" 
@@ -124,6 +124,14 @@
             </view>
           </view>
         </view>
+
+        <view wx:if="{{navIndex==2}}" class="btn_wrap">
+          <button class="btn"
+            hover-class="btn_active"
+            catchtap="openCancelModal"
+            data-item="{{item}}"
+          >退单</button>
+        </view>
       </view>
     </block>
     
@@ -131,7 +139,6 @@
   </view>
 
   <view style="height:200rpx;"></view>
-
 
 
   <!-- tabbar -->
@@ -194,4 +201,11 @@
       我的
     </van-tabbar-item>
   </van-tabbar>
+
+  <!-- ***************************************模态框*************************************** -->
+  <cancelorder id="cancelordermodal"
+    show="{{showCancelModal}}"
+    bind:onCancel="closeCancelModal"
+    bind:onConfirm="confirmCancelModal"
+  ></cancelorder>
 </view>
