--- a/pages/renchou/renchou.wxss
+++ b/pages/renchou/renchou.wxss
@@ -158,15 +158,15 @@ Page {
 }
 
 .code {
-  /* width: 362rpx;
+  width: 362rpx;
   height: 362rpx;
-  background-color: #ebebeb; */
+  /* background-color: #ebebeb; */
   margin: 58rpx auto 37rpx;
 }
 
 .code_img {
-  /* width: 100%;
-  height: 100%; */
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 
@@ -285,8 +285,9 @@ Page {
 }
 
 /* 添加商品 */
-.addbtn{
-  height:58rpx;
+
+.addbtn {
+  height: 58rpx;
   margin: 24rpx;
   border-radius: 10rpx;
   display: flex;
@@ -298,6 +299,6 @@ Page {
   background-color: #f5f5f5;
 }
 
-.addbtn_active{
+.addbtn_active {
   background-color: #ededed;
 }
